--- a/app/src/main/res/menu/menu_editor.xml
+++ b/app/src/main/res/menu/menu_editor.xml
@@ -4,8 +4,15 @@
 
     <item
         android:id="@+id/action_delete"
-        android:orderInCategory="100"
+        android:orderInCategory="200"
         android:title="@string/action_delete"
         android:icon="@drawable/ic_delete_white_48dp"
+        app:showAsAction="always"
+        android:visible="false"  />
+    <item
+        android:id="@+id/action_save"
+        android:orderInCategory="100"
+        android:title="@string/action_save"
         app:showAsAction="always" />
+
 </menu>
